fixed firefox z-index; used native blur

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -33,6 +33,7 @@
     position: fixed;
     left: 0px;
     top: 0px;
+    z-index: -1;
     // pseudo-make image edges be defined
     height: 100%;
     width: 100%;
@@ -40,15 +41,12 @@
     .main-top-bg {
       height: 100%;
       transform: scale(1.1);
-      z-index: -1;
       background: linear-gradient(to bottom, lighten(rgba(254, 218, 138, 0.8), 20%) 0%,
                                              lighten(rgba(254, 218, 138, 0.35), 20%) 100%), 
                                              url("engineering2-min.jpg") no-repeat center center;
       -moz-background-size: cover;
       -o-background-size: cover;
       background-size: cover;
-      -webkit-filter: blur(4px);
-      filter: blur(4px);
     }
   }
   .main-title {
@@ -67,7 +65,6 @@
     margin-right: auto;
     width: 100%;
     max-width: 800px;
-    -webkit-filter: blur(0px);
     .main-top-info {
       text-align: left;
       float: left;
